# stroy_market

./: .gitignore  README.md  docker-compose.yml
fast_api/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  migrate.sh  pyproject.toml  pytest.ini
fast_api/alembic/: env.py
fast_api/alembic/versions/: 3fc2c025cbac_initial_migration.py  9fc745063fbd_model_store.py
fast_api/app/: exceptions.py  main.py  seed.py
fast_api/app/api/: __init__.py  category.py  product.py  store.py
fast_api/app/core/: config.py  database.py
fast_api/app/crud/: category.py  product.py  store.py
fast_api/app/models/: __init__.py  category.py  product.py  product_store.py  store.py
fast_api/app/schemas/: category.py  product.py  store.py
fast_api/tests/: api_fixtures.py  conftest.py  db_fixtures.py  docker_fixtures.py  mock_fixtures.py  test_api.py  test_category.py  test_product.py  test_store.py
vite_react/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
vite_react/src/: App.tsx  index.css  main.tsx
vite_react/src/api/: categoryApi.ts  productApi.ts  storeApi.ts
vite_react/src/components/CategoryFilter/: CategoryFilter.tsx
vite_react/src/constants/: apiRoutes.ts  messages.ts
vite_react/src/hooks/: useCategories.ts  useModal.ts  useProductFilters.ts  useProducts.ts  useSnackbar.ts  useStores.ts  useToggle.ts
vite_react/src/styles/: cardStyles.ts
vite_react/src/types/: Category.ts  PreparedData.ts  Product.ts  Store.ts  index.ts
vite_react/src/utils/: storeHandlers.ts
vite_react/src/views/: ProductsPage.tsx
(+14 files in other folders)
