[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["shurxet <s.shurupov.88@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
psycopg2-binary = "^2.9.10"
fastapi = "^0.115.3"
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
